--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
         <img class="logo" src="assets/logo.svg" alt="Blogr Landing Page">
         <ul>
           <li id="dropdown1" class="main-nav-heading">
-            <a href="#">Product
-              <img class="arrow arrow-image-light" src="assets/icon-arrow-light.svg">
-              <img class="arrow arrow-image-dark" src="assets/icon-arrow-dark.svg">
+            <a href="#">Product<svg xmlns="http://www.w3.org/2000/svg" class="arrow arrow-image-light" width="10"
+                height="7" opacity=".75">
+                <path fill="none" stroke="#FFF" stroke-width="2" d="M1 1l4 4 4-4" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" class="arrow arrow-image-dark" width="10" height="7">
+                <path fill="none" stroke="#FF7B86" stroke-width="2" d="M1 1l4 4 4-4" />
+              </svg>
             </a>
             <ul id="subNav1" class="dropdown-menu" aria-labelledby="dropdown1">
               <li><a href="#">Overview</a></li>
@@ -29,9 +33,13 @@
             </ul>
           </li>
           <li id="dropdown2" class="main-nav-heading">
-            <a href="#">Company
-              <img class="arrow arrow-image-light" src="assets/icon-arrow-light.svg">
-              <img class="arrow arrow-image-dark" src="assets/icon-arrow-dark.svg">
+            <a href="#">Company<svg xmlns="http://www.w3.org/2000/svg" class="arrow arrow-image-light" width="10"
+                height="7" opacity=".75">
+                <path fill="none" stroke="#FFF" stroke-width="2" d="M1 1l4 4 4-4" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" class="arrow arrow-image-dark" width="10" height="7">
+                <path fill="none" stroke="#FF7B86" stroke-width="2" d="M1 1l4 4 4-4" />
+              </svg>
             </a>
             <ul id="subNav2" class="dropdown-menu">
               <li><a href="#">About</a></li>
@@ -41,9 +49,13 @@
             </ul>
           </li>
           <li id="dropdown3" class="main-nav-heading">
-            <a href="#">Connect
-              <img class="arrow arrow-image-light" src="assets/icon-arrow-light.svg">
-              <img class="arrow arrow-image-dark" src="assets/icon-arrow-dark.svg">
+            <a href="#">Connect<svg xmlns="http://www.w3.org/2000/svg" class="arrow arrow-image-light" width="10"
+                height="7" opacity=".75">
+                <path fill="none" stroke="#FFF" stroke-width="2" d="M1 1l4 4 4-4" />
+              </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" class="arrow arrow-image-dark" width="10" height="7">
+                <path fill="none" stroke="#FF7B86" stroke-width="2" d="M1 1l4 4 4-4" />
+              </svg>
             </a>
             <ul id="subNav3" class="dropdown-menu">
               <li><a href="#">Contact</a></li>
@@ -57,14 +69,14 @@
         <ul>
           <li>
             <a href="#">
-              <button type="button" class="account-btn login">
+              <button id="login" type="button" class="button">
                 Login
               </button>
             </a>
           </li>
           <li>
             <a href="#">
-              <button type="button" class="account-btn sign-up active">
+              <button type="button" class="button button-active">
                 Sign Up
               </button>
             </a>
@@ -81,9 +93,9 @@
           <h1 class="mainHeading">A modern publishing platform</h1>
           <h4>Grow your audience and build your online brand</h4>
         </div>
-        <div class="mainHeadingButtons">
-          <button type="button" class="btn start"><span>Start for Free</span></button>
-          <button type="button" class="btn learn"><span>Learn More</span></button>
+        <div class="hero-buttons">
+          <button id="start-hero-button" type="button" class="button button-active"><span>Start for Free</span></button>
+          <button id="learn-hero-button" type="button" class="button"><span>Learn More</span></button>
         </div>
       </div>
     </section>
