--- a/index.html
+++ b/index.html
@@ -99,6 +99,36 @@
         </div>
       </div>
     </section>
+    <section id="slot-1">
+      <div class="content">
+        <h2>Designed for the future</h2>
+        <article class="copy">
+          <section>
+            <h3>Introducing an extensible editor</h3>
+            <p class="text">Blogr features an exceedingly intuitive interface which lets you focus on one thing:
+              creating
+              content.
+              The editor supports management of multiple blogs and allows easy manipulation of embeds such as images,
+              videos, and Markdown. Extensibility with plugins and themes provide easy ways to add functionality or
+              change the looks of a blog.</p>
+          </section>
+          <section>
+            <h3>Robust content management</h3>
+            <p class="text">Flexible content management enables users to easily move through posts. Increase the
+              usability
+              of your blog
+              by adding customized categories, sections, format, or flow. With this functionality, you’re in full
+              control.
+            </p>
+          </section>
+        </article>
+        <picture>
+          <source srcset="assets/illustration-editor-desktop.svg" media="(min-width: 1024px)" />
+          <source srcset="assets/illustration-editor-mobile.svg" media="(max-width: 1023px)" />
+          <img src="assets/illustration-editor-desktop.svg" alt="Designed for the future" />
+        </picture>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
