--- a/index.html
+++ b/index.html
@@ -129,6 +129,18 @@
         </picture>
       </div>
     </section>
+    <section id="slot-2">
+      <div class="infrastructure">
+        <img src="assets/illustration-phones.svg">
+        <article>
+          <h2>State of the Art Infrastructure</h2>
+          <p>With reliability and speed in mind, worldwide data centers provide the backbone for ultra-fast
+            connectivity.
+            This ensures your site will load instantly, no matter where your readers are, keeping your site competitive.
+          </p>
+        </article>
+      </div>
+    </section>
   </main>
   <footer></footer>
 </body>
