adding 3rd section

--- a/index.html
+++ b/index.html
@@ -141,6 +141,23 @@
         </article>
       </div>
     </section>
+    <section id="slot-3">
+      <picture>
+        <source srcset="assets/illustration-laptop-desktop.svg" media="(min-width: 1024px)" />
+        <source srcset="assets/illustration-laptop-mobile.svg" media="(max-width: 1023px)" />
+        <img src="assets/illustration-laptop-desktop.svg" alt="Free, open, simple" />
+      </picture>
+      <article>
+        <h3>Free, open, simple</h3>
+        <p>Blogr is a free and open source application backed by a large community of helpful developers. It supports
+          features such as code syntax highlighting, RSS feeds, social media integration, third-party commenting tools,
+          and works seamlessly with Google Analytics. The architecture is clean and is relatively easy to learn.</p>
+        <h3>Powerful tooling</h3>
+        <p>Batteries included. We built a simple and straightforward CLI tool that makes customization and deployment a
+          breeze, but
+          capable of producing even the most complicated sites.</p>
+      </article>
+    </section>
   </main>
   <footer></footer>
 </body>
