--- a/index.html
+++ b/index.html
@@ -159,8 +159,34 @@
       </article>
     </section>
   </main>
-  <footer></footer>
+  <footer>
+    <img src="assets/logo.svg" alt="Blogr Landing Page">
+    <nav>
+      <!-- <div> -->
+      <ul>
+        <h4>Product</h4>
+        <li><a href="#">Overview</a></li>
+        <li><a href="#">Pricing</a></li>
+        <li><a href="#">Marketplace</a></li>
+        <li><a href="#">Features</a></li>
+        <li><a href="#">Integrations</a></li>
+      </ul>
+      <ul>
+        <h4>Company</h4>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Careers</a></li>
+      </ul>
+      <ul>
+        <h4>Connect</h4>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Newsletter</a></li>
+        <li><a href="#">LinkedIn</a></li>
+      </ul>
+      <!-- </div> -->
+    </nav>
+  </footer>
 </body>
-
 
 </html>
