--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <nav>
+    <nav id="desktop-nav">
       <div class="left-nav">
         <img class="logo" src="assets/logo.svg" alt="Blogr Landing Page">
         <ul>
